--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/java=utf-8
 encoding//src/main/webapp/WEB-INF/view/include/header.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/view/index.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/view/register/step2.jsp=UTF-8
+encoding//src/test/java=utf-8
